# Spoti-Stats-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  SpotifyAPI.cpp  SpotifyAPI.hpp  ToDo.md  main.cpp
include/: ClientNetwork.h  DetailedSearch.hpp  FormatJSON.hpp  Guest.hpp  RegisteredUser.hpp  Search.hpp  ServerNetwork.h  SpotifyAPI.hpp  SpotifyConcrete.hpp  SpotifyCreator.hpp  SpotifyFactory.hpp
src/: ClientNetwork.cpp  DetailedSearch.cpp  FormatJSON.cpp  Guest.cpp  Search.cpp  ServerNetwork.cpp  SpotifyAPI.cpp  SpotifyFactory.cpp  main.cpp  server_main.cpp
src/models/: Album.cpp  Album.h  Aritst.cpp  Artist.cpp  Artist.h  BasicSpotify.cpp  BasicSpotify.h  Track.cpp  Track.h
